--- a/courses.html
+++ b/courses.html
@@ -163,7 +163,7 @@
         <div class="product-wrapper w-dyn-list">
           <div role="list" class="collection-list w-dyn-items">
             <div role="listitem" class="product-collection-item w-dyn-item">
-              <a href="DigitalMarketingwithAI.html" class="product-item-link w-inline-block">
+              <a href="digitalmarketing.html" class="product-item-link w-inline-block">
                   <div class="facts-card-container">
                       <div class="full-card-holder">
                           <div class="font-card">
@@ -633,7 +633,7 @@
     
   
     <div role="listitem" class="product-collection-item w-dyn-item">
-      <a href="AppDevelopment.html" class="product-item-link w-inline-block">
+      <a href="appdevelopment.html" class="product-item-link w-inline-block">
           <div class="facts-card-container">
               <div class="full-card-holder">
                   <div class="font-card">
@@ -725,7 +725,7 @@
   </div>
   
   <div role="listitem" class="product-collection-item w-dyn-item">
-    <a href="WebDevelopment.html" class="product-item-link w-inline-block">
+    <a href="webdevelopment.html" class="product-item-link w-inline-block">
         <div class="facts-card-container w-condition-invisible">
             <div class="full-card-holder">
                 <div class="font-card"></div>
@@ -984,11 +984,11 @@
         </div>
         <div class="footer-grid-content">
           <div class="primary-font" data-en="Programs" data-ar="البرامج">Programs</div>
-          <div class="fade-in-move-on-scroll"><a href="ToolsforBusinessOwners.html" class="footer-link w-inline-block">
+          <div class="fade-in-move-on-scroll"><a href="aimasterclass.html" class="footer-link w-inline-block">
               <div  data-ar="الأعمال بالذكاء الاصطناعي" data-en="Business with AI" >Business with AI</div>
               <div class="link-block-underline"></div>
             </a></div>
-          <div class="fade-in-move-on-scroll"><a href="GraphicDesigningandVideoEditing.html" class="footer-link w-inline-block">
+          <div class="fade-in-move-on-scroll"><a href="graphicdesigning.html" class="footer-link w-inline-block">
               <div data-en="Graphic Design" data-ar="التصميم الجرافيكي">Graphic Design</div>
               <div class="link-block-underline"></div>
             </a></div>
@@ -996,7 +996,7 @@
               <div data-en="Digital Marketing" data-ar="التسويق الرقمي">Digital Marketing</div>
               <div class="link-block-underline"></div>
             </a></div>
-          <div class="fade-in-move-on-scroll"><a href="./FutureofProductivity.html" class="footer-link w-inline-block">
+          <div class="fade-in-move-on-scroll"><a href="./futureofproductivity.html" class="footer-link w-inline-block">
               <div  data-en="Productivity" data-ar="الإنتاجية">Productivity</div>
               <div class="link-block-underline"></div>
             </a></div>
