--- a/courses.html
+++ b/courses.html
@@ -357,7 +357,7 @@
         
             
         <div role="listitem" class="product-collection-item w-dyn-item">
-          <a href="graphicdesigning" class="product-item-link w-inline-block">
+          <a href="graphicdesigning.html" class="product-item-link w-inline-block">
               <div class="facts-card-container">
                   <div class="full-card-holder">
                       <div class="font-card">
