--- a/index.html
+++ b/index.html
@@ -1140,11 +1140,11 @@
               <div  data-ar="الأعمال بالذكاء الاصطناعي" data-en="Business with AI" >Business with AI</div>
               <div class="link-block-underline"></div>
             </a></div>
-          <div class="fade-in-move-on-scroll"><a href="GraphicDesigningandVideoEditing.html" class="footer-link w-inline-block">
+          <div class="fade-in-move-on-scroll"><a href="graphicdesigning.html" class="footer-link w-inline-block">
               <div data-en="Graphic Design" data-ar="التصميم الجرافيكي">Graphic Design</div>
               <div class="link-block-underline"></div>
             </a></div>
-          <div class="fade-in-move-on-scroll"><a href="GraphicDesigningandVideoEditing.html" class="footer-link w-inline-block">
+          <div class="fade-in-move-on-scroll"><a href="graphicdesigning.html" class="footer-link w-inline-block">
               <div data-en="Digital Marketing" data-ar="التسويق الرقمي">Digital Marketing</div>
               <div class="link-block-underline"></div>
             </a></div>
